<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".StopAfstandActivity$PlaceholderFragment">

    <TextView android:text="@string/selecteer_snelheid" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selecteer_snelheid" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSnelheid"
        android:layout_below="@+id/selecteer_snelheid"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecteer_reactietijd"
        android:id="@+id/selecteer_reactietijd"
        android:layout_below="@+id/editTextSnelheid"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextReactietijd"
        android:layout_below="@+id/selecteer_reactietijd"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextSnelheid" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecteer_wegtype"
        android:id="@+id/selecteer_wegtype"
        android:layout_below="@+id/editTextReactietijd"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bereken_stopafstand"
        android:id="@+id/button_bereken_stopafstand"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextReactietijd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopafstand_is"
        android:id="@+id/textViewStopafstand"
        android:layout_below="@+id/button_bereken_stopafstand"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stopafstand_in_meter"
        android:id="@+id/textViewStopafstandInMeter"
        android:layout_below="@+id/textViewStopafstand"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/selecteer_wegtype"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button_bereken_stopafstand">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wegtype_droog"
            android:id="@+id/radioButtonDroog"
            android:layout_below="@+id/selecteer_wegtype"
            android:layout_alignParentStart="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wegtype_nat"
            android:id="@+id/radioButtonNat"
            android:layout_below="@+id/radioButtonDroog"
            android:layout_alignParentStart="true" />
    </RadioGroup>

</RelativeLayout>
